--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,13 @@
 .btn {
   background-color: #008080;
   color: #ffffff;
+  border: 0px;
 }
+
+.btn-outline-light{
+  border: white solid 1px !important
+}
+
 
 .btn:hover, .btn:focus {
   background-color: #66CCCC;
@@ -20,6 +26,19 @@
 
 .btn:disabled {
   background-color: #CCCCCC;
+}
+
+.btn-danger {
+  background-color: #d82e2e;
+  color: #ffffff;
+}
+
+.btn-danger:hover, .btn:focus {
+  background-color: #d82e2e;
+}
+
+.btn-danger:disabled {
+  background-color: #d82e2e;
 }
 
 /* Text */
@@ -81,3 +100,17 @@ label:disabled, input[type="checkbox"]:disabled, input[type="radio"]:disabled {
   box-shadow:none !important;
   border:1px solid #ccc !important;
 }
+
+.nav-link:hover {
+  cursor: pointer;
+  background-color: #016b6b !important;
+}
+
+.nav-link-active{
+  background-color: #008080 !important;
+}
+
+.navbar-brand{
+  font-weight: 700;
+}
+
